# FletCopy

./: README.md  UseWithFilemanager.md  pyproject.toml
src/: flet_util.py  main.py
